crates/compiler/src/snapshots/compiler__parser__test__custom_dir.snap
---
source: crates/compiler/src/parser.rs
expression: dir

---
Dir:
  name: test
  argument: ~
  modifiers: []
  expression:
    content:
      raw: tt
      ops:
        bits: 18
    location:
      start:
        offset: 10
        line: 1
        column: 11
      end:
        offset: 14
        line: 1
        column: 15
  head_loc:
    start:
      offset: 3
      line: 1
      column: 4
    end:
      offset: 9
      line: 1
      column: 10
  location:
    start:
      offset: 3
      line: 1
      column: 4
    end:
      offset: 14
      line: 1
      column: 15

