crates/compiler/src/snapshots/compiler__parser__test__dir_parse_error-2.snap
---
source: crates/compiler/src/parser.rs
expression: dir

---
Attr:
  name: "v-:"
  value:
    content:
      raw: tt
      ops:
        bits: 18
    location:
      start:
        offset: 7
        line: 1
        column: 8
      end:
        offset: 11
        line: 1
        column: 12
  name_loc:
    start:
      offset: 3
      line: 1
      column: 4
    end:
      offset: 6
      line: 1
      column: 7
  location:
    start:
      offset: 3
      line: 1
      column: 4
    end:
      offset: 11
      line: 1
      column: 12

